@@ -14,12 +14,13 @@ import org.gradle.kotlin.dsl.named
 
 plugins {
     // Apply the plugin. You can find the latest version at https://projects.neoforged.net/neoforged/ModDevGradle
-    id("net.neoforged.moddev") version "2.0.103" apply false
-    id("net.neoforged.moddev.legacyforge") version "2.0.103" apply false
+    id("net.neoforged.moddev") apply false
+    id("net.neoforged.moddev.legacyforge") apply false
     id("embeddium-mdg-remapper")
     id("celeritas.platform-conventions")
     id("celeritas.shader-conventions") apply false
     id("embeddium-fabric-module-finder")
+    id("maven-publish")
 }
 
 group = "org.embeddedt"
@@ -44,15 +45,42 @@ tasks.named<Jar>("jar") {
     archiveClassifier.set("deobf")
 }
 
+java {
+    withSourcesJar()
+}
+
+val neoforgePr = versionedProperty("neoforge_pr")
+if (neoforgePr != null) {
+    repositories {
+        maven {
+            name = "NeoForge PR maven"
+            url = uri("https://prmaven.neoforged.net/NeoForge/pr$neoforgePr")
+            content {
+                includeModule("net.neoforged", "neoforge")
+                includeModule("net.neoforged", "testframework")
+            }
+        }
+    }
+}
+
+val isDecompDisabled = System.getenv("CELERITAS_DISABLE_DECOMP") == "true"
+
 val config: MDGConfig = if (modLoader == ModLoader.NEOFORGE) {
     apply(plugin = "net.neoforged.moddev")
     val neoForge = project.extensions.getByName("neoForge") as NeoForgeExtension
-    neoForge.version = versionedProperty("neoforge")
+    neoForge.enable {
+        version = requireNotNull(versionedProperty("neoforge")) { "NeoForge version must be specified for $minecraftVersion" }
+        isDisableRecompilation = isDecompDisabled
+    }
+    neoForge.unitTest.enable()
     MDGConfig(neoForge, "jar")
 } else {
     apply(plugin = "net.neoforged.moddev.legacyforge")
     val legacyForge = project.extensions.getByName("legacyForge") as LegacyForgeExtension
-    legacyForge.version = versionedProperty("forge")
+    legacyForge.enable {
+        forgeVersion = versionedProperty("forge")
+        isDisableRecompilation = isDecompDisabled
+    }
     val obfuscation = project.extensions.getByType<ObfuscationExtension>()
     val generateNamedToIntermediary = tasks.register<GenerateNamedToIntermediaryTSRGTask>("generateNamedToIntermediaryTSRG") {
         tsrgPath = layout.buildDirectory.file("generated/namedToIntermediaryCeleritas.tsrg")
@@ -88,11 +116,28 @@ if (parchmentVersion != null) {
     }
 }
 
-modDevExtension.mods {
-    create("embeddium") {
-        sourceSet(sourceSets.main.get())
-        sourceSet(project(":common").sourceSets.main.get())
-        sourceSet(project(":common-shaders").sourceSets.main.get())
+val mainMod = modDevExtension.mods.create("embeddium") {
+    sourceSet(sourceSets.main.get())
+    val commonProj = project(":common")
+    listOf("main", "lwjgl3", "lwjglCommon").forEach {
+        sourceSet(commonProj.sourceSets.getByName(it))
+    }
+}
+
+if (modLoader == ModLoader.NEOFORGE) {
+    (modDevExtension as NeoForgeExtension).unitTest.testedMod = mainMod
+
+    tasks.named<Test>("test") {
+        useJUnitPlatform()
+    }
+} else {
+    // Disable unit tests
+    sourceSets.named("test") {
+        java.setSrcDirs(emptyList<String>())
+        resources.setSrcDirs(emptyList<String>())
+    }
+    tasks.named("test") {
+        enabled = false
     }
 }
 
@@ -111,18 +156,23 @@ if (stonecutter.constants.getOrDefault("shaders", false)) {
 modDevExtension.runs {
     create("client") {
         client()
+        ideName.set("")
         for (config in modMixinConfigs) {
             programArgument("--mixin.config")
             programArgument(config)
         }
+        if (stonecutter.eval(minecraftVersion, ">=1.20.5")) {
+            // Use generational ZGC as we are on Java 21+
+            jvmArgument("-XX:+UseZGC")
+            jvmArgument("-XX:+ZGenerational")
+        }
+        jvmArgument("-XX:+UnlockDiagnosticVMOptions")
+        jvmArgument("-XX:+DebugNonSafepoints")
     }
 }
 
 dependencies {
     shadow(project(":common")) {
-        isTransitive = false
-    }
-    shadow(project(":common-shaders")) {
         isTransitive = false
     }
     val ffapiVersion = versionedProperty("ffapi")
@@ -152,11 +202,17 @@ dependencies {
     ModDependencyCollector.obtainDeps(project) { cfg, dep ->
         dependencies.add(cfg, dep)
     }
+
+    testImplementation(platform("org.junit:junit-bom:${rootProject.property("junit_version")}"))
+    testImplementation("org.junit.jupiter:junit-jupiter")
+    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 }
 
 tasks.named<Jar>("jar") {
     manifest {
         attributes.put("MixinConfigs", modMixinConfigs.joinToString(","))
+        attributes.put("Fabric-Loom-Mixin-Remap-Type", "static")
+        attributes.put("Fabric-Mapping-Namespace", "intermediary")
     }
 }
 
@@ -170,7 +226,7 @@ val shadowJar = tasks.register<ShadowJar>("shadowRemapJar") {
     archiveBaseName = defaultArchiveBaseName
     archiveClassifier = ""
     configurations = listOf(project.configurations.shadow.get())
-    from(tasks.named(config.productionJarTask))
+    from(zipTree(tasks.named<Jar>(config.productionJarTask).get().archiveFile))
     manifest.inheritFrom(tasks.named<Jar>("jar").get().manifest)
     if (modLoader == ModLoader.FORGE && stonecutter.eval(minecraftVersion, "<1.17")) {
         relocate("com.llamalad7.mixinextras", "org.embeddedt.embeddium.impl.shadow.mixinextras")
@@ -188,4 +244,16 @@ val packageJar = tasks.register("packageJar", Copy::class) {
 
 tasks.named("assemble") {
     dependsOn(packageJar)
+}
+
+publishing {
+    publications {
+        create<MavenPublication>("default") {
+            artifactId = defaultArchiveBaseName
+            artifact(shadowJar.map { it.archiveFile })
+            artifact(tasks.named("sourcesJar")) {
+                classifier = "sources"
+            }
+        }
+    }
 }
